--- a/temporary/index.html
+++ b/temporary/index.html
@@ -12,14 +12,40 @@
             <div class="header">HEADER</div>
             <div class="main-container">
                 <nav class="navigation">NAV</nav>
-                <div class="editor-section">
-                    <div class="monaco-container">
-                        <div class="tabs-area">TABS</div>
-                        <div class="monaco-editor">EDITOR</div>
+                <div class="split-pane horizontal">
+                    <div class="pane1">pane-1</div>
+                    <div class="editor-section">
+                        <div class="monaco-container">
+                            <div class="tabs-area">TABS</div>
+                            <div class="monaco-editor">EDITOR</div>
+                        </div>
                     </div>
+                    <div class="preview">PREVIEW</div>
                 </div>
-                <div class="preview">PREVIEW</div>
             </div>
         </div>
     </body>
 </html>
+
+
+
+<!-- 
+codesandbox分析
+```
+div.sc-fXa      // header以下のすべてのラッパ
+    nav
+    div.SplitPane.vertical  // pane1, pane2ふくむラッパ
+        div.pane.vertical.pane1 // file情報など
+        div.pane.vertical.pane2 // preview, editorふくむペイン
+```
+```
+div.sc-fXa  // div.main-container
+    nav // nav
+    div.SplitPane.vertical  // div.split-pane.horizontal
+        div.pane.vertical.pane1 // div.editor-section
+        div.pane.vertical.pane2 // div.preview
+```
+
+div.editor-sectionとdiv.previewをラップするdiv.SplitPane.vertical要素の代わりが必要
+
+ -->
